# Planar.jl

./: .AGENTS.md.swp  .env  .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPENDENCY_TREE.md  Dockerfile  Manifest.toml  Project.toml  README.md  REFACTOR.md  copilot_commits.txt  copilot_runtests_commits.txt  fix_code_blocks.jl  fix_error_handling.jl  fix_remaining_code_blocks.jl  index.html  objects.inv  package-lock.json  package.json  resolve.jl  run_tests.jl  search_index.js  update_all.jl  update_all.sh  update_manifests.py  update_manifests_v2.py
ccxt-gateway/: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  daemon_gateway.py  docker-compose.yml  pyproject.toml
ccxt-gateway/config/: default.yaml
ccxt-gateway/docs/: API.md
ccxt-gateway/src/ccxt_gateway/: __init__.py  config.py  main.py
ccxt-gateway/src/ccxt_gateway/api/: __init__.py  admin.py  rest.py  websocket.py
ccxt-gateway/src/ccxt_gateway/core/: __init__.py  process_manager.py  protocol.py  zmq_broker.py
ccxt-gateway/tests/: conftest.py  test_100.py  test_admin_api.py  test_api_fixed.py  test_comprehensive.py  test_coverage_100.py  test_easiest_gaps.py  test_easy_gaps.py  test_edge2.py  test_edge_cases.py  test_final_100.py  test_final_gaps.py  test_final_gaps2.py  test_integration_proper.py  test_loops2.py  test_main_and_pm.py  test_methods.py  test_more2.py  test_more_coverage.py  test_more_coverage2.py  test_more_gaps.py  test_pm_coverage.py  test_push1.py  test_push2.py  test_push3.py  test_push4.py  test_push5.py  test_push6.py  test_push7.py  test_push_higher.py  test_remaining.py  test_rest_api.py  test_subprocess_basic.py  test_updates_more.py  test_websocket.py  test_zmq_simple.py
(+768 files in other folders)
