[project]
name = "ccxt-gateway"
version = "0.1.0"
description = "High-performance self-hosted gateway for 100+ crypto exchanges via CCXT"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ccxt-gateway contributors"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyzmq>=26.0.0",
    "pydantic-settings>=2.3.0",
    "psutil>=6.0.0",
    "ccxt[pro]>=4.4.0",
    "uvloop>=0.20.0",
    "orjson>=3.10.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
server = [
    "granian>=1.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccxt_gateway"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ccxt_gateway/**/*",
    "config/**/*",
    "scripts/**/*",
    "tests/**/*",
]

[project.scripts]
ccxt-gateway = "ccxt_gateway.main:main"
